# ur5_simulation

./: README.md  Task1  Task2  Task2_2  Task3  Task4  requirements.txt
catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/lib/pkgconfig/: moveit_config.pc  my_pkg.pc  ur10_moveit_config.pc  ur10e_moveit_config.pc  ur16e_moveit_config.pc  ur20_moveit_config.pc  ur30_moveit_config.pc  ur3_moveit_config.pc  ur3e_moveit_config.pc  ur5_moveit_config.pc  ur5e_moveit_config.pc  ur_description.pc  ur_gazebo.pc  ur_kinematics.pc
catkin_ws/devel/share/moveit_config/cmake/: moveit_configConfig.cmake
catkin_ws/devel/share/my_pkg/cmake/: my_pkgConfig.cmake
catkin_ws/src/CoPilot/backend/: app.py  model.py
catkin_ws/src/moveit_config/: .setup_assistant
catkin_ws/src/moveit_config/config/: ros_controllers.yaml  ur5_robot.srdf
catkin_ws/src/moveit_config/launch/: controller_manager.launch  gazebo.launch  moveit_rviz.launch  planning_context.launch
catkin_ws/src/my_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/my_pkg/config/: config.rviz  controllers.yaml
catkin_ws/src/my_pkg/launch/: spawn_ur5_eff_controller.launch  task0.launch  task1.launch  task2.launch  task2_2.launch  task3.launch  task4.launch
catkin_ws/src/my_pkg/scripts/: run_motion_control.py  test_api.py  test_api_suggetor.py
catkin_ws/src/my_pkg/src/: code_suggest.py  copilot.py  joint_publisher.py  motion_publisher.py  robot_api.py  ur5_ik.cpp
catkin_ws/src/my_pkg/urdf/: ur5.xacro
catkin_ws/src/server/: server.py
catkin_ws/src/web/: index.html
(+16 files in other folders)
